src/_bootstrap/_kalos_lex.c
/* Generated by re2c 2.1.1 on Thu Jul 15 13:37:21 2021 */
#include "_kalos_defines.h"
#include "_kalos_lex.h"

enum yyc_state {
    yycinit,
    yycinstring,
    yycinstringmulti,
    yyccomment,
    yycstringformat,
};

#define KALOS_TOKEN(x) #x ,
const char* kalos_token_strings[] = {
    #include "_kalos_constants.inc"
    "<invalid>",
};

enum string_state {
    STRING_STATE_NORMAL,
    STRING_STATE_EXPR,
    STRING_STATE_DONE,
};

#define KALOS_COPY_TOKEN kalos_lex_strncpy(output, word_start, word_end - word_start)

void kalos_lex_init(const char kalos_far* s, kalos_lex_state* state) {
    state->s = s;
    state->line = 1;
    state->string_interp_state = STRING_STATE_NORMAL;
    state->string_interp_mode = yycinit;
}

kalos_token kalos_lex_peek(kalos_lex_state* state, char* output) {
    kalos_lex_state temp = *state;
    return kalos_lex(&temp, output);
}

kalos_token kalos_lex(kalos_lex_state* state, char* output) {
    enum yyc_state c = yycinit;
    if (state->string_interp_state == STRING_STATE_DONE) {
        c = state->string_interp_mode;
        state->string_interp_state = STRING_STATE_NORMAL;
    }
    const char kalos_far** s = &state->s;
    int* line = &state->line;
    *output = 0;

    const char kalos_far* word_start;
    const char kalos_far* word_end;
    const char kalos_far* ch;
    const char kalos_far* YYMARKER;

    const char kalos_far *yyt1; 
    for (;;) {
        state->token_start = *s;
    
{
	char yych;
	unsigned int yyaccept = 0;
	switch (c) {
	case yycinit:
		goto yyc_init;
	case yycinstring:
		goto yyc_instring;
	case yycinstringmulti:
		goto yyc_instringmulti;
	case yycstringformat:
		goto yyc_stringformat;
	case yyccomment:
		goto yyc_comment;
	}
/* *********************************** */
yyc_init:
	yych = *(*s);
	switch (yych) {
	case 0x00:	goto yy2;
	case '\t':
	case '\r':
	case ' ':	goto yy6;
	case '\n':	goto yy9;
	case '!':	goto yy11;
	case '"':	goto yy13;
	case '#':	goto yy15;
	case '%':	goto yy17;
	case '&':	goto yy19;
	case '(':	goto yy21;
	case ')':	goto yy23;
	case '*':	goto yy25;
	case '+':	goto yy27;
	case ',':	goto yy29;
	case '-':	goto yy31;
	case '.':	goto yy33;
	case '/':	goto yy35;
	case '0':
		yyt1 = (*s);
		goto yy37;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt1 = (*s);
		goto yy39;
	case ':':	goto yy41;
	case ';':	goto yy43;
	case '<':	goto yy45;
	case '=':	goto yy47;
	case '>':	goto yy49;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'g':
	case 'j':
	case 'k':
	case 'q':
	case 'u':
	case 'x':
	case 'y':
	case 'z':
		yyt1 = (*s);
		goto yy51;
	case '[':	goto yy54;
	case ']':	goto yy56;
	case '^':	goto yy58;
	case 'a':
		yyt1 = (*s);
		goto yy60;
	case 'b':
		yyt1 = (*s);
		goto yy61;
	case 'c':
		yyt1 = (*s);
		goto yy62;
	case 'd':
		yyt1 = (*s);
		goto yy64;
	case 'e':
		yyt1 = (*s);
		goto yy65;
	case 'f':
		yyt1 = (*s);
		goto yy66;
	case 'h':
		yyt1 = (*s);
		goto yy67;
	case 'i':
		yyt1 = (*s);
		goto yy68;
	case 'l':
		yyt1 = (*s);
		goto yy69;
	case 'm':
		yyt1 = (*s);
		goto yy70;
	case 'n':
		yyt1 = (*s);
		goto yy71;
	case 'o':
		yyt1 = (*s);
		goto yy72;
	case 'p':
		yyt1 = (*s);
		goto yy73;
	case 'r':
		yyt1 = (*s);
		goto yy74;
	case 's':
		yyt1 = (*s);
		goto yy75;
	case 't':
		yyt1 = (*s);
		goto yy76;
	case 'v':
		yyt1 = (*s);
		goto yy77;
	case 'w':
		yyt1 = (*s);
		goto yy78;
	case '{':	goto yy79;
	case '|':	goto yy81;
	case '}':	goto yy83;
	case '~':	goto yy85;
	default:	goto yy4;
	}
yy2:
	++(*s);
	{ return KALOS_TOKEN_EOF; }
yy4:
	++(*s);
	{ return KALOS_TOKEN_ERROR; }
yy6:
	yych = *++(*s);
	switch (yych) {
	case '\t':
	case '\r':
	case ' ':	goto yy6;
	default:	goto yy8;
	}
yy8:
	{ continue; }
yy9:
	++(*s);
	{ if (state->string_interp_state != STRING_STATE_NORMAL) return KALOS_TOKEN_ERROR; (*line)++; continue; }
yy11:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy87;
	default:	goto yy12;
	}
yy12:
	{ return KALOS_TOKEN_BANG; }
yy13:
	yyaccept = 0;
	yych = *(YYMARKER = ++(*s));
	switch (yych) {
	case '"':	goto yy89;
	default:	goto yy14;
	}
yy14:
	c = yycinstring;
	goto yyc_instring;
yy15:
	++(*s);
	c = yyccomment;
	goto yyc_comment;
yy17:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy91;
	default:	goto yy18;
	}
yy18:
	{ return KALOS_TOKEN_PERCENT; }
yy19:
	yych = *++(*s);
	switch (yych) {
	case '&':	goto yy93;
	case '=':	goto yy95;
	default:	goto yy20;
	}
yy20:
	{ return KALOS_TOKEN_BITAND; }
yy21:
	++(*s);
	{ return KALOS_TOKEN_PAREN_OPEN; }
yy23:
	++(*s);
	{ return KALOS_TOKEN_PAREN_CLOSE; }
yy25:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy97;
	default:	goto yy26;
	}
yy26:
	{ return KALOS_TOKEN_STAR; }
yy27:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy99;
	default:	goto yy28;
	}
yy28:
	{ return KALOS_TOKEN_PLUS; }
yy29:
	++(*s);
	{ return KALOS_TOKEN_COMMA; }
yy31:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy101;
	default:	goto yy32;
	}
yy32:
	{ return KALOS_TOKEN_MINUS; }
yy33:
	yyaccept = 1;
	yych = *(YYMARKER = ++(*s));
	switch (yych) {
	case '.':	goto yy103;
	default:	goto yy34;
	}
yy34:
	{ return KALOS_TOKEN_PERIOD; }
yy35:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy104;
	default:	goto yy36;
	}
yy36:
	{ return KALOS_TOKEN_SLASH; }
yy37:
	yyaccept = 2;
	yych = *(YYMARKER = ++(*s));
	switch (yych) {
	case 'X':
	case 'x':	goto yy106;
	default:	goto yy38;
	}
yy38:
	word_start = yyt1;
	word_end = (*s);
	{ KALOS_COPY_TOKEN; output[word_end - word_start] = 0; return KALOS_TOKEN_INTEGER; }
yy39:
	yych = *++(*s);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy39;
	default:	goto yy38;
	}
yy41:
	++(*s);
	{
            if (state->string_interp_state == STRING_STATE_EXPR) {
                c = yycstringformat;
                continue;
            }
            return KALOS_TOKEN_COLON;
        }
yy43:
	++(*s);
	{ return KALOS_TOKEN_SEMI; }
yy45:
	yych = *++(*s);
	switch (yych) {
	case '<':	goto yy107;
	case '=':	goto yy109;
	default:	goto yy46;
	}
yy46:
	{ return KALOS_TOKEN_LT; }
yy47:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy111;
	default:	goto yy48;
	}
yy48:
	{ return KALOS_TOKEN_EQ; }
yy49:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy113;
	case '>':	goto yy115;
	default:	goto yy50;
	}
yy50:
	{ return KALOS_TOKEN_GT; }
yy51:
	yych = *++(*s);
yy52:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy51;
	default:	goto yy53;
	}
yy53:
	word_start = yyt1;
	word_end = (*s);
	{ KALOS_COPY_TOKEN; output[word_end - word_start] = 0; return KALOS_TOKEN_WORD; }
yy54:
	++(*s);
	{ return KALOS_TOKEN_SQBRA_OPEN; }
yy56:
	++(*s);
	{ return KALOS_TOKEN_SQBRA_CLOSE; }
yy58:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy117;
	default:	goto yy59;
	}
yy59:
	{ return KALOS_TOKEN_BITXOR; }
yy60:
	yych = *++(*s);
	switch (yych) {
	case 'n':	goto yy119;
	default:	goto yy52;
	}
yy61:
	yych = *++(*s);
	switch (yych) {
	case 'o':	goto yy120;
	case 'r':	goto yy121;
	default:	goto yy52;
	}
yy62:
	yych = *++(*s);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy51;
	case 'o':	goto yy122;
	default:	goto yy63;
	}
yy63:
	{ return KALOS_TOKEN_C; }
yy64:
	yych = *++(*s);
	switch (yych) {
	case 'e':	goto yy123;
	case 'i':	goto yy124;
	default:	goto yy52;
	}
yy65:
	yych = *++(*s);
	switch (yych) {
	case 'l':	goto yy125;
	case 'x':	goto yy126;
	default:	goto yy52;
	}
yy66:
	yych = *++(*s);
	switch (yych) {
	case 'a':	goto yy127;
	case 'n':	goto yy128;
	case 'o':	goto yy130;
	case 'r':	goto yy131;
	default:	goto yy52;
	}
yy67:
	yych = *++(*s);
	switch (yych) {
	case 'a':	goto yy132;
	default:	goto yy52;
	}
yy68:
	yych = *++(*s);
	switch (yych) {
	case 'd':	goto yy133;
	case 'f':	goto yy134;
	case 'm':	goto yy136;
	case 'n':	goto yy137;
	default:	goto yy52;
	}
yy69:
	yych = *++(*s);
	switch (yych) {
	case 'o':	goto yy139;
	default:	goto yy52;
	}
yy70:
	yych = *++(*s);
	switch (yych) {
	case 'o':	goto yy140;
	default:	goto yy52;
	}
yy71:
	yych = *++(*s);
	switch (yych) {
	case 'a':	goto yy141;
	case 'u':	goto yy142;
	default:	goto yy52;
	}
yy72:
	yych = *++(*s);
	switch (yych) {
	case 'b':	goto yy143;
	case 'n':	goto yy144;
	default:	goto yy52;
	}
yy73:
	yych = *++(*s);
	switch (yych) {
	case 'r':	goto yy146;
	default:	goto yy52;
	}
yy74:
	yych = *++(*s);
	switch (yych) {
	case 'e':	goto yy147;
	default:	goto yy52;
	}
yy75:
	yych = *++(*s);
	switch (yych) {
	case 't':	goto yy148;
	default:	goto yy52;
	}
yy76:
	yych = *++(*s);
	switch (yych) {
	case 'r':	goto yy149;
	default:	goto yy52;
	}
yy77:
	yych = *++(*s);
	switch (yych) {
	case 'a':	goto yy150;
	case 'o':	goto yy151;
	default:	goto yy52;
	}
yy78:
	yych = *++(*s);
	switch (yych) {
	case 'r':	goto yy152;
	default:	goto yy52;
	}
yy79:
	++(*s);
	{ return KALOS_TOKEN_BRA_OPEN; }
yy81:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy153;
	case '|':	goto yy155;
	default:	goto yy82;
	}
yy82:
	{ return KALOS_TOKEN_BITOR; }
yy83:
	++(*s);
	{
            if (state->string_interp_state == STRING_STATE_EXPR) { 
                state->string_interp_state = STRING_STATE_DONE;
                output[0] = 0; // empty format spec
                return KALOS_TOKEN_STRING_FORMAT_SPEC;
            }
            return KALOS_TOKEN_BRA_CLOSE; 
        }
yy85:
	++(*s);
	{ return KALOS_TOKEN_TILDE; }
yy87:
	++(*s);
	{ return KALOS_TOKEN_NOTEQ; }
yy89:
	yych = *++(*s);
	switch (yych) {
	case '"':	goto yy157;
	default:	goto yy90;
	}
yy90:
	(*s) = YYMARKER;
	switch (yyaccept) {
	case 0:
		goto yy14;
	case 1:
		goto yy34;
	default:
		goto yy38;
	}
yy91:
	++(*s);
	{ return KALOS_TOKEN_EQ_PERCENT; }
yy93:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy159;
	default:	goto yy94;
	}
yy94:
	{ return KALOS_TOKEN_LOGAND; }
yy95:
	++(*s);
	{ return KALOS_TOKEN_EQ_BITAND; }
yy97:
	++(*s);
	{ return KALOS_TOKEN_EQ_STAR; }
yy99:
	++(*s);
	{ return KALOS_TOKEN_EQ_PLUS; }
yy101:
	++(*s);
	{ return KALOS_TOKEN_EQ_MINUS; }
yy103:
	yych = *++(*s);
	switch (yych) {
	case '.':	goto yy161;
	default:	goto yy90;
	}
yy104:
	++(*s);
	{ return KALOS_TOKEN_EQ_SLASH; }
yy106:
	yych = *++(*s);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy163;
	default:	goto yy90;
	}
yy107:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy165;
	default:	goto yy108;
	}
yy108:
	{ return KALOS_TOKEN_LEFT_SHIFT; }
yy109:
	++(*s);
	{ return KALOS_TOKEN_LTE; }
yy111:
	++(*s);
	{ return KALOS_TOKEN_EQEQ; }
yy113:
	++(*s);
	{ return KALOS_TOKEN_GTE; }
yy115:
	yych = *++(*s);
	switch (yych) {
	case '=':	goto yy167;
	default:	goto yy116;
	}
yy116:
	{ return KALOS_TOKEN_RIGHT_SHIFT; }
yy117:
	++(*s);
	{ return KALOS_TOKEN_EQ_BITXOR; }
yy119:
	yych = *++(*s);
	switch (yych) {
	case 'y':	goto yy169;
	default:	goto yy52;
	}
yy120:
	yych = *++(*s);
	switch (yych) {
	case 'o':	goto yy171;
	default:	goto yy52;
	}
yy121:
	yych = *++(*s);
	switch (yych) {
	case 'e':	goto yy172;
	default:	goto yy52;
	}
yy122:
	yych = *++(*s);
	switch (yych) {
	case 'n':	goto yy173;
	default:	goto yy52;
	}
yy123:
	yych = *++(*s);
	switch (yych) {
	case 'b':	goto yy174;
	default:	goto yy52;
	}
yy124:
	yych = *++(*s);
	switch (yych) {
	case 's':	goto yy175;
	default:	goto yy52;
	}
yy125:
	yych = *++(*s);
	switch (yych) {
	case 's':	goto yy176;
	default:	goto yy52;
	}
yy126:
	yych = *++(*s);
	switch (yych) {
	case 'p':	goto yy177;
	default:	goto yy52;
	}
yy127:
	yych = *++(*s);
	switch (yych) {
	case 'l':	goto yy178;
	default:	goto yy52;
	}
yy128:
	yych = *++(*s);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy51;
	default:	goto yy129;
	}
yy129:
	{ return KALOS_TOKEN_FN; }
yy130:
	yych = *++(*s);
	switch (yych) {
	case 'r':	goto yy179;
	default:	goto yy52;
	}
yy131:
	yych = *++(*s);
	switch (yych) {
	case 'o':	goto yy181;
	default:	goto yy52;
	}
yy132:
	yych = *++(*s);
	switch (yych) {
	case 'n':	goto yy182;
	default:	goto yy52;
	}
yy133:
	yych = *++(*s);
	switch (yych) {
	case 'l':	goto yy183;
	default:	goto yy52;
	}
yy134:
	yych = *++(*s);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy51;
	default:	goto yy135;
	}
yy135:
	{ return KALOS_TOKEN_IF; }
yy136:
	yych = *++(*s);
	switch (yych) {
	case 'p':	goto yy185;
	default:	goto yy52;
	}
yy137:
	yych = *++(*s);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy51;
	case 't':	goto yy186;
	default:	goto yy138;
	}
yy138:
	{ return KALOS_TOKEN_IN; }
yy139:
	yych = *++(*s);
	switch (yych) {
	case 'o':	goto yy187;
	default:	goto yy52;
	}
yy140:
	yych = *++(*s);
	switch (yych) {
	case 'd':	goto yy188;
	default:	goto yy52;
	}
yy141:
	yych = *++(*s);
	switch (yych) {
	case 'm':	goto yy189;
	default:	goto yy52;
	}
